--- a/Endweek.html
+++ b/Endweek.html
@@ -118,7 +118,9 @@
 <p>Linkedin <a href="https://www.linkedin.com/in/evans-oloo-4731a586">LinkedIn here</a></p>
 <p>Facebook <a href="https://www.facebook.com/" >Facebook here</a></p>
 <form>
+<label>Email</label>
     <input type="text" placeholder type="Email address">
+<label>Password</label>
     <input type="password" Placeholder type="Enter password">
 </form>
 </body>
