--- a/Endweek.html
+++ b/Endweek.html
@@ -117,11 +117,13 @@
 <p>You can reach me on my social media accounts as shown</p>
 <p>Linkedin <a href="https://www.linkedin.com/in/evans-oloo-4731a586">LinkedIn here</a></p>
 <p>Facebook <a href="https://www.facebook.com/" >Facebook here</a></p>
+<p>You can also join my newsletter as below</p>
 <form>
 <label>Email</label>
     <input type="text" placeholder type="Email address">
 <label>Password</label>
     <input type="password" Placeholder type="Enter password">
+    <button>Newsletter</button>
 </form>
 </body>
 </html>
